<resources>
    <string name="app_name">Tourist Guide</string>
    <string name="app_description">A must have App for those interested in Travel. The Tourist Guide App provides users with various Features from Choosing the Correct Destination,Checking Whether,Compass Utility and to easily Organizing the Trip</string>
    <string name="version">Version 1.0</string>
    <string name="develope">Developed By -</string>
    <string name="navigation_bar_open">Tourist Guide</string>
    <string name="navigation_bar_close">Tourist Guide</string>
    <string name="make_an_order">Select Items From Check List</string>
    <string name="dialog_title">Items available in a Check List</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string-array name="checklist_item">
        <item>Keys</item>
        <item>Cloths</item>
        <item>Mobile Phone</item>
        <item>Earphones</item>
        <item>Charger</item>
        <item>Tickets</item>
        <item>Foods</item>
        <item>Bags</item>
    </string-array>
    <string name="title_activity_puneloc">Map</string>
    <string name="Pune">Pune</string>
    <string name="title_activity_mumbailoc">Map</string>
    <string name="title_activity_ahmedabadloc">Map</string>
    <string name="title_activity_bangaloreloc">Map</string>
    <string name="title_activity_chennailoc">Map</string>
    <string name="title_activity_delhiloc">Map</string>
    <string name="title_activity_hyderabadloc">Map</string>
    <string name="title_activity_jaipurloc">Map</string>
    <string name="title_activity_kolkataloc">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="one">Pune is a sprawling city in the western Indian state of Maharashtra. It was once the base of the Peshwas (prime ministers) of the Maratha Empire, which lasted from 1674 to 1818. Its known for the grand Aga Khan Palace, built in 1892 and now a memorial to Mahatma Gandhi, whose ashes are preserved in the garden. The 8th-century Pataleshwar Cave Temple is dedicated to the Hindu god Shiva.</string>
    <string name="two">Pune lies on the western margin of the Deccan plateau, at an altitude of 560 m (1,840 ft) above sea level. It is on the leeward side of the Sahyadri mountain range, which forms a barrier from the Arabian Sea. It is a hilly city, with Vetal Hill rising to 800 m (2,600 ft) above sea level. Just outside the city the Sinhagad fort is at an altitude of 1,300 metres (4,300 feet). It is situated at approximately 18Â° 32" north latitude and 73Â° 51" east longitude. By road Pune is 2,063 km (1,282 mi) south-west of Kolkata, 1,173 km (729 mi) south of Delhi, 734 km (456 mi) north of Bangalore, and 149 km (93 mi) south-east of Mumbai. </string>
    <string name="three">Pune has the eighth largest metropolitan economy and the sixth highest per capita income in the country. The key sectors of the local economy are education, manufacturing and information technology (IT).
Pune has historically been known as a center for higher education and has been referred to as the educational capital of India. In 2006, it was reported that nearly 200,000 students from across India study in Pune at nine universities and more than a hundred educational institutes</string>
    <string name="pm1">There can be no mention of Pune without mentioning its most iconic structures, the Shaniwarwada. A building that is steeped in tragedy, history and mystery, Shaniwarwada today is a popular heritage building visited by thousands of tourists daily. It was built in 18th century, in 1730 and was an important centre of Maratha Empire.  It remained the seat of Peshwas for long until the British took over in 1818. It is a strong edifice built in stone and limestone and it is said that the teak used in the construction was brought from Junnar and the stones from Jejuri. The foundation stone of Shaniwarwada was laid by Peshwa Baji Rao on a Saturday and hence the name. Wada means residential building. Though a symbol of the powerful Maratha Empire, Shaniwarwada had only stories of deceit and pain.</string>
    <string name="pm2">Though the present building was built by the Pune Municipal Corporation, the original Lal Mahal was present at the same place but since it was destroyed, the Pune Municipal Corporation rebuilt the palace in 1988. Lal Mahal actually was built by Shahaji Bhosale, father of Shivaji for his wife Jijabai and son, in 1630 AD. Shivaji spent 10 years of his childhood at the palace. Built in red brick, today it is an apt tribute to the great emperor with many representations on his life. It is a popular tourist destination of Pune and families come here to spend some peaceful time in a place that was a playground for one of the most powerful and best rulers in India. It is located at Kasba Peth on NH 4 and is easily accessible.</string>
    <string name="pm3">It is one of the best historical places in Pune and its architecture one of the best too. This place, though a beautiful palace was a tragic memory for Mahatma Gandhi as two of his closest people, his wife Kasturba and his dutiful secretary, Mahadev Desai, died here during their imprisonment. They were imprisoned here with Gandhiji in 1942 following the launch of Quit India Movement. Samadhis have been built in their honour at the palace which is visited by lakhs of visitors every year. The samadhis are built in marble and was designed by the renowned architect Charles Correa. A statue of Mahatma Gandhi stands in the premises. The Palace also exhibits many daily items used by Gandhiji such as his bed, writing desk and more. Kasturbaâ€™s saris and her footwear are also displayed here. On the walls, there are many photographs of Indiaâ€™s Independence movement. The Imam Sultan Muhammad Shah Agakhan III built this palace in the year 1892. He was a renowned politician. The Aga Khan Palace is situated on Nehru Road and is open to public from 9 am to 6 pm.</string>
    <string name="pm4">Shivneri Fort was not built by the Marathas and is believed to have built during the Satavahana rule. There are remains of rock caves which are still evident on the fort, which points to the fact that it was a Buddhist centre once. From there on, many rulers occupied the fort. Shivajiâ€™s grandfather, Malojirao Bhosale was given this fort in 1599 and since the fort was strong and invincible, Shahaji felt it was the best place for his wife to give birth. It is a triangular fort and built on a hill and is well-maintained. There are many parts of the fort that are worth seeing. There are seven gates at the fort, each with a name. The fort had strong walls and they are intact even today. A temple of Shivai goddess is present within the fort and it was after this goddess that Shivaji was named. There is also a lake within the fort. You can also see the Ambarkhana or the place used to store food. It is quite large and a yearâ€™s ration could be stored here.</string>
    <string name="pm5">Built in 1807 AD, Vishram Bagh Wada was the residence of Bajirao II till his defeat to British. It is a grand palace consisting of three storeys and was renowned for its woodwork. The faÃ§ade of the palace in terracotta, white and brown adds to the beauty. What catches you attention at once is the gigantic wooden pillars and the wooden veranda. There is a large hall on the first floor which is said to have been a dancing hall, where dances were organized for Peshwaâ€™s entertainment.  Today, not all the grand architecture remains but still, it reminds you of the stunning Maratha architectural style.  Spread in an area of 20,000 sq ft, the palace is a reminder of the Peshwa rule in Maharashtra, of their bravery, their perseverance and also of their tragic stories. Today, it is almost a government building with a post office and municipal offices. There is also a museum that houses artefacts from Maratha Empire. It is located at Sadashiv Peth.</string>
    <string name="a1">Ahmedabad, in western India, is the largest city in the state of Gujarat. The Sabarmati River runs through its center. On the western bank is the Gandhi Ashram at Sabarmati, which displays the spiritual leaderâ€™s living quarters and artifacts. Across the river, the Calico Museum of Textiles, once a cloth merchants mansion, has a significant collection of antique and modern fabrics.</string>
    <string name="a2">Ahmedabad lies at 23.03Â°N 72.58Â°E in western India at 53 metres (174 ft) above sea level on the banks of the Sabarmati river, in north-central Gujarat. It covers an area of 464 km2 (179 sq mi). The Sabarmati frequently dried up in the summer, leaving only a small stream of water, and the city is in a sandy and dry area. However with the execution of the Sabarmati River Front Project and Embankment, the waters from the Narmada river have been diverted to the Sabarmati to keep the river flowing throughout the year, thereby eliminating Ahmedabad water problems. The steady expansion of the Rann of Kutch threatened to increase desertification around the city area and much of the state; however, the Narmada Canal network is expected to alleviate this problem. Except for the small hills of Thaltej-Jodhpur Tekra, the city is almost flat. Three lakes lie within the citys limitsâ€”Kankaria, Vastrapur and Chandola. Kankaria, in the neighbourhood of Maninagar, is an artificial lake developed by the Sultan of Gujarat, Kutb-ud-din, in 1451.</string>
    <string name="a3">Manek Chowk is an open square near the centre of the city that functions as a vegetable market in the morning and a jewellery market in the afternoon. However, it is better known for its food stalls in the evening, which sell local street food. It is named after the Hindu saint Baba Maneknath.Parts of Ahmedabad are known for their folk art. The artisans of Rangeela pol make tie-dyed bandhinis, while the cobbler shops of Madhupura sell traditional mojdi (also known as mojri) footwear. Idols of Ganesha and other religious icons are made in huge numbers in the Gulbai Tekra area. The shops at the Law Garden sell mirror work handicraft.</string>
    <string name="a4">Ahmedabad is the largest inland industrial center and the second largest industrial center in western India after Mumbai. The gross domestic product of Ahmedabad metro was estimated at $160 billion in 2010. It is the largest supplier of denim and one of the largest exporters of gems and jewellery in the country. Ahmedabad hosts the headquarters of major public-sector banks Ahmedabad Dist Co Op Bank, Ahd Mercantile Co-Op Bank Ltd, Ahmedabad Mercantil Co Op Bank, Dena Bank, The Cosmos Co - Op Bank,Manager Gujarat Ambuja Co-Operative, The Gujarat State Co-operative Bank Ltd.Gujarat State Coop Bank, The Kalupur Bank, Ahmedabad Capital Bank, Kutch Bank co op, Bank of Rajasthan, Bank of Marwad,
The textile industry has been the main industry of Ahmedabad.</string>
    <string name="a5">According to the 2011 national census, the population of Ahmedabad was declared to be 7,214,225. This figure was only limited to the municipality region. The total population of the Ahmedabad Urban Agglomeration (which also includes the region governed by AUDA) came to 7.2 million people.[1] There were 886 females to every 1000 males in 2001. Now there are 904 women to 1000 men in 2011. Ahmedabad had a literacy rate of 79.89% in 2001 which rose to 89.62 percent in 2011. Out of this, male and female literacy are 93.96 and 84.81 percent as of 2011 census.</string>
</resources>