<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_layout"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="Summary"
            android:textSize="15dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a1" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="Geography"
            android:textStyle="bold"
            android:textSize="15dp"/>


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a2" />

        <TextView
            android:id="@+id/hang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="Economy"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a4" />

        <TextView
            android:id="@+id/shop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="Culture"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a3" />

        <TextView
            android:id="@+id/rest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="Demographics"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a5"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>