<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_layout"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="1.Shaniwarwada"
            android:textSize="15dp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            app:srcCompat="@drawable/pm1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pm1" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="2. Lal Mahal"
            android:textStyle="bold"
            android:textSize="15dp"/>


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="284dp"
            app:srcCompat="@drawable/pm2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pm2" />

        <TextView
            android:id="@+id/hang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="3. Aga Khan Palace"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="286dp"
            app:srcCompat="@drawable/pm3" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pm3" />

        <TextView
            android:id="@+id/shop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="4. Shivneri Fort"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            app:srcCompat="@drawable/pm4" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pm4" />

        <TextView
            android:id="@+id/rest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="4dp"
            android:padding="20dp"
            android:text="5. Vishram Bagh Wada"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="284dp"
            app:srcCompat="@drawable/pm5" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pm5"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>