<?xml version="1.0" encoding="UTF-8"?>

    <ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:context=".utilities.AboutUsFragment"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/app_name"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:src="@drawable/google_travel_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:gravity="center"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="8dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/app_description"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/version"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:text="@string/develope"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:text="Arbaz Shaikh"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:text="Abhishek Panse"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:text="Pranav Patil"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:text="Sushant Rauniyar"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>